--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,14 @@
           <option value="Venezuela">Venezuela</option>
         </select>
       </li>
+      <li>
+        <label>avatar URL</label>
+        <input class="picker" for="avatarURL" type="text" />
+      </li>
+      <li>
+        <label>Background URL</label>
+        <input class="picker" for="background" type="text" />
+      </li>
     </ul>
     <div id="widget_content"></div>
 
