--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
       </li>
       <li>
         <label>Twitter</label>
-        <input class="picker" for="twitter" type="text" />
+        <input class="picker" for="twitter" type="text" target="_blank" />
       </li>
       <li>
         <label>Github</label>
@@ -72,6 +72,7 @@
           <option value="Munich">Munich</option>
           <option value="Caracas">Caracas</option>
           <option value="Toronto">Toronto</option>
+          <option value="Barcelona">Barcelona</option>
         </select>
       </li>
       <li>
@@ -82,6 +83,7 @@
           <option value="Germany">Germany</option>
           <option value="Canada">Canada</option>
           <option value="Venezuela">Venezuela</option>
+          <option value="España">España</option>
         </select>
       </li>
       <li>
