--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
       </li>
       <li>
         <label>Twitter</label>
-        <input class="picker" for="twitter" type="text" target="_blank" />
+        <input class="picker" for="twitter" type="text" />
       </li>
       <li>
         <label>Github</label>
